fixing bug overflow content

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ body {
   flex: 1;
   margin-top: 40px;
   margin-bottom: 40px;
+  overflow: scroll;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 h1 {
